--- a/SGF_Bounce.vcxproj
+++ b/SGF_Bounce.vcxproj
@@ -88,7 +88,7 @@ copy /Y "$(TargetDir)$(TargetName).vip" %DST%</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\CallbackFunctions.cpp" />
+    <ClCompile Include="src\API_Functions.cpp" />
     <ClCompile Include="src\SGF_Bounce.cpp" />
   </ItemGroup>
   <ItemGroup>
